Start Session modal now uppercases code, fixed mixed code/timer sizing and spacing, fixed bug where success message was always being displayed

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -144,6 +144,10 @@ body {
     width: 100%;
 }
 
+.start-modal-code {
+    white-space: nowrap;
+}
+
 .student-checkin {
     position: absolute;
     margin: auto;
